<package>
  <name>mtw_driver</name>
  <description>

     ROS driver for Xsens MTw Awinda motion trackers

  </description>
  <author>Vicent Girbes Juan</author>
  <version>0.9.0</version>
  <maintainer email="vgirbes@idf.upv.es"> Vicent Girbes Juan</maintainer>
  <license>BSD</license>
  <url>https://github.com/sento86/mtw_driver</url>


  <buildtool_depend>catkin</buildtool_depend>  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>message_runtime</run_depend>

</package>


